# glory

./: .clang-format  .clang-tidy  .gitignore  ABILITIES.md  CHARACTER_MOVEMENT_AND_ANIMATION_DEEP_DIVE.md  CMakeLists.txt  CMakePresets.json  ENGINE_STRUCTURE_DEEP_DIVE.md  FILES_WITH_RENDERPASS_USAGE.txt  GLB_INVESTIGATION_INDEX.md  GLB_PIPELINE_ANALYSIS.md  HUD_AND_CLICK_INDICATOR_PLAN.md  PLAN.md  README.md  RENDERING_SUMMARY.txt  RENDERPASS_QUICK_REFERENCE.txt  TOWERS_MONSTERS_ABILITIES_PLAN.md  UNIT_SYSTEM_PLAN.md  VULKAN_RENDERPASS_MAPPING.md  docs_VFX_SYSTEM_IMPLEMENTATION_SPEC_Version2.md  minion_npc_implementation_spec.md
.github/workflows/: ci.yml
assets/abilities/: fire_mage_bomb.json  fire_mage_fireball.json  fire_mage_flame_pillar.json  fire_mage_molten_shield.json  fire_mage_trick.json  frost_archer_arrow.json  frost_archer_enchant.json  frost_archer_hawk.json  frost_archer_volley.json  ice_zone.json  iron_guardian_charge.json  iron_guardian_fortress.json  iron_guardian_ground_slam.json  iron_guardian_shield_wall.json  nature_shield.json  storm_strike.json
assets/config/: aggro_config.json  audio_events.json  config.json  minion_stats.json  monster_config.json  render_settings.json
assets/heroes/: fire_mage.json  frost_archer.json  iron_guardian.json
assets/maps/: map_summonersrift.json
assets/trails/: fireball_trail.json
assets/vfx/: auto_attack_burst.json  death.json  level_up.json  recall.json  respawn.json  vfx_anticipation_fire_hands.json  vfx_anticipation_storm_charge.json  vfx_attack_blocked.json  vfx_auto_attack.json  vfx_bomb_cast.json  vfx_bomb_impact.json  vfx_bomb_impact_shockwave_sparks.json  vfx_bomb_impact_smoke.json  vfx_bomb_trail.json  vfx_bomb_trail_smoke.json  vfx_critical_hit.json  vfx_death_collapse.json  vfx_death_flash.json  vfx_death_soul.json  vfx_fire_flipbook.json  vfx_fireball_cast.json  vfx_fireball_cast_flash.json  vfx_fireball_cast_glow.json  vfx_fireball_cast_sparks.json  vfx_fireball_cast_swirl.json  vfx_fireball_core_glow.json  vfx_fireball_explosion.json  vfx_fireball_explosion_smoke.json  vfx_fireball_explosion_sparks.json  vfx_fireball_impact_embers_rain.json  vfx_fireball_impact_flames.json  vfx_fireball_impact_smoke.json  vfx_fireball_impact_sparks.json  vfx_fireball_outer.json  vfx_fireball_projectile.json  vfx_fireball_trail_embers.json  vfx_flame_pillar_cast.json  vfx_flame_pillar_eruption.json  vfx_flame_pillar_eruption_embers.json  vfx_flame_pillar_eruption_smoke.json  (+102 more)
build_clean/: test_maploader  test_mirror  test_terrain
build_clean/shaders/: click_indicator.frag.spv  click_indicator.vert.spv  debug.vert.spv  grid.frag.spv  grid.vert.spv  skinned.vert.spv  triangle.frag.spv
docs/: ARCHITECTURE.md  CAMERA_PHYSICS.md  CHARACTER_TEST.md  CUSTOM_ANIMATION_SYSTEM_IMPROVEMENTS.md  GAMEPLAY.md  GLORY_ENGINE_AAA_IMPLEMENTATION_PLAN.md  GLORY_ENGINE_DEEP_DIVE_ISSUES_Version1.md  GLORY_VULKAN_DEEP_ANALYSIS.txt  IMPLEMENTATION_PLAN.md  MAP_PLAN.md  MODEL_RENDERING_FIXES.md  OPTIMIZATION_PLAN.md  PLAN_GLB_MAP.md  RENDERING_DOCUMENTATION_INDEX.md  RENDERING_VFX_SYSTEM_DEEP_DIVE.md  VFX_QUICK_START.md  Vulkan_VFX_TDD_for_MOBA.md  agent.md
shaders/: bloom_blur.frag  bloom_extract.frag  click_indicator.frag  click_indicator.vert  collision_broadphase.comp  color_grade.frag  cone_ability.vert  cone_energy.frag  cone_grid.frag  cone_lightning.frag  cone_lightning.vert  cull.comp  debug.vert  deferred.frag  deferred.vert  deferred_decal.frag  deferred_decal.vert  depth_only.vert  dissolve.frag  distortion.frag  explosion_disk.vert  explosion_fireball.frag  explosion_shockwave.frag  explosion_sphere.vert  flow_field.comp  flow_field_integration.comp  fog.frag  fog.vert  fow_blur.comp  fow_upsample.comp  fow_visibility.comp  gbuffer.frag  gbuffer.vert  grid.frag  grid.vert  ground_decal.frag  ground_decal.vert  hiz_cull.comp  hiz_generate.comp  impostor_billboard.frag  (+47 more)
src/: main.cpp
src/ability/: AbilityComponents.h  AbilityDef.cpp  AbilityDef.h  AbilitySystem.cpp  AbilitySystem.h  AbilityTypes.h  CooldownSystem.cpp  CooldownSystem.h  EffectSystem.cpp  EffectSystem.h  ProjectileSystem.cpp  ProjectileSystem.h  StatusEffectSystem.cpp  StatusEffectSystem.h  VFXEventQueue.h
src/animation/: AnimationClip.h  AnimationPlayer.cpp  AnimationPlayer.h  CPUSkinning.cpp  CPUSkinning.h  Skeleton.h
src/asset/: CookedLoader.cpp  CookedLoader.h
src/assets/: AssetFormat.h  AssetRegistry.cpp  AssetRegistry.h  CookedLoader.cpp  CookedLoader.h
src/audio/: AudioEngine.cpp  AudioEngine.h  AudioResourceManager.cpp  AudioResourceManager.h  GameAudioEvents.cpp  GameAudioEvents.h  SoundHandle.cpp  SoundHandle.h  miniaudio_impl.cpp
src/camera/: Camera.cpp  Camera.h
src/combat/: AutoAttackSystem.cpp  AutoAttackSystem.h  CombatComponents.h  CombatSystem.cpp  CombatSystem.h  DissolveEffect.h  EconomySystem.cpp  EconomySystem.h  GpuCollisionSystem.cpp  GpuCollisionSystem.h  HeroDefinition.h  HeroRegistry.cpp  HeroRegistry.h  MinionWaveSystem.cpp  MinionWaveSystem.h  NPCBehaviorSystem.cpp  NPCBehaviorSystem.h  NPCSystem.cpp  RespawnSystem.cpp  RespawnSystem.h  StructureSystem.cpp  StructureSystem.h
src/core/: Allocators.cpp  Application.cpp  Application.h  DeterministicMath.h  DeterministicRNG.h  FixedPoint.h  FrameAllocator.cpp  FrameAllocator.h  FramePacer.cpp  FramePacer.h  GameConfig.cpp  GameConfig.h  GameState.cpp  GameState.h  GameSystems.cpp  GameSystems.h  GameplaySystem.cpp  GameplaySystem.h  Log.cpp  Log.h  PoolAllocator.cpp  PoolAllocator.h  Profiler.cpp  Profiler.h  SimToRenderSyncSystem.cpp  SimToRenderSyncSystem.h  SimulationLoop.cpp  SimulationLoop.h  Systems.cpp  (+9 more)
tests/: test_ability.cpp  test_animation.cpp  test_audio.cpp  test_combat.cpp  test_determinism.cpp  test_fixedpoint.cpp  test_flowfield.cpp  test_fog.cpp  test_jungle.cpp  test_maploader.cpp  test_minion.cpp  test_mirror.cpp  test_nav.cpp  test_networking.cpp  test_physics.cpp  test_replay.cpp  test_simulation_loop.cpp  test_snapshot.cpp  test_structure.cpp  test_terrain.cpp
tools/: asset_cook.cpp  fbx_to_glb.py  gen_heightmap.cpp  mesh_cook.cpp  mp4_to_atlas.py
(+316 files in other folders)
